--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,25 @@
-:root{
-    --color-white : #fff;
-    --color-dark : #000;
-    --color-orange : #ffa500;
+:root {
+    --color-white: #fff;
+    --color-dark: #000;
+    --color-orange: #ffa500;
 }
 
-.navbar.fkNavbar{
+.navbar.fkNavbar {
     padding-top: 0;
     padding-bottom: 0;
 }
 
-.fkNavbar .navbar-brand{
+.fkNavbar .navbar-brand {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 
 
-.fkNavbar .navbar-nav .active>.nav-link, 
-.fkNavbar .navbar-nav .nav-link.active, 
-.fkNavbar .navbar-nav .nav-link.show, 
+.fkNavbar .navbar-nav .active>.nav-link,
+.fkNavbar .navbar-nav .nav-link.active,
+.fkNavbar .navbar-nav .nav-link.show,
 .fkNavbar .navbar-nav .show>.nav-link,
-.fkNavbar .navbar-nav .nav-link:focus, 
+.fkNavbar .navbar-nav .nav-link:focus,
 .fkNavbar .navbar-nav .nav-link:hover {
     color: var(--color-white);
     border-bottom: 4px solid var(--color-orange);
@@ -34,36 +34,13 @@
     padding-bottom: 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.fkNavbar .navbar-toggler {
+    border-color: var(--color-white);
+}
 
 
 @media all and (min-width:992px) {
-    .fkNavbar .nav-link{
+    .fkNavbar .nav-link {
         margin-left: 6px;
     }
 }
@@ -72,18 +49,17 @@
 /* ############# mainslider css starts here ################ */
 
 .mainSlider .carousel-inner,
-.mainSlider .carousel-item > img{
+.mainSlider .carousel-item>img {
     height: 400px;
 }
 
-.mainSlider .carousel-caption{
-    top:50%;
+.mainSlider .carousel-caption {
+    top: 50%;
     bottom: auto;
     transform: translateY(-50%);
 }
 
 
-
-.mainSlider .carousel-item > img{
+.mainSlider .carousel-item>img {
     object-fit: cover;
 }
