--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@
 }
 
 
-
 /* ############# mainParallax css starts here ################ */
 
 .mainParallax{
@@ -95,8 +94,29 @@
     background-color: rgba(0, 0, 0, .7);
 }
 
+@media all and (max-width:600px) {
+    .laptopInfo {
+        text-align: center;
+    }
+}
+
 .imgGallary img{
     width: 100%;
     object-fit: cover;
-    height: 400px;
+    height: 300px;
+}
+
+.newsInfo{
+    background-color: whitesmoke;
+}
+
+/* @media all and (max-width:500px) {
+    .newsInfo > .mainForm{
+         display: inline-block;
+    }
+} */
+
+.theUltimateCoders{
+    background-color: var(--color-dark);
+    color: var(--color-white);
 }
