work on something correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,12 @@
 .fkNavbar .navbar-brand {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    margin-left: 20px;
 }
 
+.navbar.fkNavbar {
+    background-color: var(--color-dark);
+}
 
 .fkNavbar .navbar-nav .active>.nav-link,
 .fkNavbar .navbar-nav .nav-link.active,
@@ -22,7 +26,8 @@
 .fkNavbar .navbar-nav .nav-link:focus,
 .fkNavbar .navbar-nav .nav-link:hover {
     color: var(--color-white);
-    border-bottom: 4px solid var(--color-orange);
+    /* border-bottom: 4px solid var(--color-orange); */
+    background-color: whitesmoke;
     color: var(--color-orange);
 }
 
@@ -40,10 +45,25 @@
 
 
 @media all and (min-width:992px) {
+
     .fkNavbar .nav-link {
         margin-left: 6px;
     }
 }
+
+@media all and (max-width:768px) {
+    .navbar.fkNavbar {
+        padding: 0;
+    }
+    .fkNavbar .navbar-toggler {
+        margin-right: 20px;
+    }
+    .fkNavbar .nav-link {
+        padding-left: 20px;
+        margin-top: 3px;
+    }
+}
+
 
 
 /* ############# mainslider css starts here ################ */
@@ -117,6 +137,8 @@
 }
 
 .theUltimateCoders{
-    background-color: var(--color-dark);
+    background: url(../images/code2.jpg) no-repeat center/cover;
     color: var(--color-white);
+    background-attachment: fixed;
+    font-style: normal;
 }
