--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,8 @@
 .fkNavbar .navbar-nav .nav-link:hover {
     color: var(--color-white);
     /* border-bottom: 4px solid var(--color-orange); */
-    background-color: whitesmoke;
-    color: var(--color-orange);
+    background-color: var(--color-white);
+    color: goldenrod;
 }
 
 .fkNavbar .navbar-nav .nav-link {
