--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,17 @@
 
 .fkNavbar .navbar-nav .active>.nav-link,
 .fkNavbar .navbar-nav .nav-link.active,
+.fkNavbar .navbar-nav .nav-link.show{
+    font-weight: bold;
+}
+
+.fkNavbar .nav-link{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.fkNavbar .navbar-nav .active>.nav-link,
+.fkNavbar .navbar-nav .nav-link.active,
 .fkNavbar .navbar-nav .nav-link.show,
 .fkNavbar .navbar-nav .show>.nav-link,
 .fkNavbar .navbar-nav .nav-link:focus,
@@ -28,7 +39,7 @@
     color: var(--color-white);
     /* border-bottom: 4px solid var(--color-orange); */
     background-color: var(--color-white);
-    color: goldenrod;
+    color: var(--color-dark);
 }
 
 .fkNavbar .navbar-nav .nav-link {
