all images updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,11 @@
 /* ############# mainParallax css starts here ################ */
 
 .mainParallax{
-    background-image: url(../images/image9.jpg);
+    background-image: url(../images/n1\ \(12\).jpg);
 }
 
 .videoInfo{
-    background-image: url(../images/image1.jpg);
+    background-image: url(../images/n1\ \(3\).jpg);
 }
 
 .mainParallax, .videoInfo {
