--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@
 @media all and (min-width:992px) {
 
     .fkNavbar .nav-link {
-        margin-left: 6px;
+        margin-right: 6px;
     }
 }
 
@@ -153,3 +153,15 @@
     background-attachment: fixed;
     font-style: normal;
 }
+
+
+
+/* ################ css for aboutus for laptopInfo ############### */
+
+.laptopInfo .row{
+    margin-bottom: 60px;
+}
+
+
+/* ########### css for aboutus for feedbackInfo ############# */
+
