--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
 .fkNavbar .navbar-nav .show>.nav-link,
 .fkNavbar .navbar-nav .nav-link:focus,
 .fkNavbar .navbar-nav .nav-link:hover {
+    transition: all .5s ease-in-out;
     color: var(--color-white);
     /* border-bottom: 4px solid var(--color-orange); */
     background-color: var(--color-white);
